--- a/src/client/stylesheets/partials/_index.scss
+++ b/src/client/stylesheets/partials/_index.scss
@@ -1,2 +1,2 @@
-// import custom partial styles
-@use 'navigation/navigation';
+// Import custom partial styles
+// Navigation styles are now handled by GOV.UK header component
