--- a/src/server/projects/manage/views/status.njk
+++ b/src/server/projects/manage/views/status.njk
@@ -159,7 +159,7 @@
     {% if suggestedUpdate and suggestedUpdate != "" %}
       {{ govukDetails({
         summaryText: "Suggested update based on concerning standards",
-        html: "<div style='font-style: italic;'>" + suggestedUpdate + "</div>"
+        html: "<div class='govuk-!-font-style-italic'>" + suggestedUpdate + "</div>"
       }) }}
     {% endif %}
 
@@ -185,104 +185,22 @@
     
     {# Build table data structure more simply #}
     <div class="govuk-table-responsive">
-      <table class="govuk-table standards-at-risk-table">
-        <thead class="govuk-table__head">
-          <tr class="govuk-table__row">
-            <th scope="col" class="govuk-table__header">Service Standard</th>
-            <th scope="col" class="govuk-table__header">Status</th>
-            <th scope="col" class="govuk-table__header">Profession</th>
-            <th scope="col" class="govuk-table__header">Assessment Commentary</th>
-            <th scope="col" class="govuk-table__header">Last Updated</th>
-          </tr>
-        </thead>
-        <tbody class="govuk-table__body">
-          {% for standard in standardsAtRisk %}
-            {% if standard.professionComments.length > 0 %}
-              {% for comment in standard.professionComments %}
-                <tr class="govuk-table__row">
-                  <td class="govuk-table__cell">
-                    <strong>Standard {{ standard.number }}</strong><br>{{ standard.name }}
-                  </td>
-                  <td class="govuk-table__cell">
-                    {{ renderStatusTag(standard.status) }}
-                  </td>
-                  <td class="govuk-table__cell">
-                    {{ comment.professionName }}
-                  </td>
-                  <td class="govuk-table__cell">
-                    {% if comment.commentary %}
-                      {% if "Path to green:" in comment.commentary %}
-                        {% set parts = comment.commentary.split("Path to green:") %}
-                        {% set issue = parts[0] | trim if parts[0] else "" %}
-                        {% set path = parts[1] | trim if parts[1] else "" %}
-                        
-                        {% if issue and path %}
-                          {{ issue + "\r\n\r\n" + path }}
-                        {% elif issue %}
-                          {{ issue }}
-                        {% elif path %}
-                          {{ path }}
-                        {% endif %}
-                      {% else %}
-                        {{ comment.commentary }}
-                      {% endif %}
-                    {% else %}
-                      No commentary
-                    {% endif %}
-                  </td>
-                  <td class="govuk-table__cell">
-                    {{ (standard.lastUpdated | formatDate) if standard.lastUpdated else "Not available" }}
-                  </td>
-                </tr>
-              {% endfor %}
-            {% else %}
-              <tr class="govuk-table__row">
-                <td class="govuk-table__cell">
-                  <strong>Standard {{ standard.number }}</strong><br>{{ standard.name }}
-                </td>
-                <td class="govuk-table__cell">
-                  {{ renderStatusTag(standard.status) }}
-                </td>
-                <td class="govuk-table__cell" colspan="2">
-                  <span class="govuk-hint govuk-!-font-size-14">No assessments</span>
-                </td>
-                <td class="govuk-table__cell">
-                  {{ (standard.lastUpdated | formatDate) if standard.lastUpdated else "Not available" }}
-                </td>
-              </tr>
-            {% endif %}
-          {% endfor %}
-        </tbody>
-      </table>
+      {{ govukTable({
+        classes: "app-standards-table",
+        head: [
+          { text: "Service Standard" },
+          { text: "Status" },
+          { text: "Profession" },
+          { text: "Assessment Commentary" },
+          { text: "Last Updated" }
+        ],
+        rows: standardsAtRisk | standardsAtRiskTableRows
+      }) }}
     </div>
   {% endif %}
 {% endblock %}
 
-{% block pageStyles %}
-<style>
-  .standards-at-risk-table td {
-    vertical-align: top;
-  }
-  
-  /* Make the table more compact */
-  .standards-at-risk-table td,
-  .standards-at-risk-table th {
-    padding: 10px 20px 10px 0;
-  }
-  
-  .standards-at-risk-table th:last-child,
-  .standards-at-risk-table td:last-child {
-    padding-right: 0;
-  }
-  
-  /* Preserve line breaks in commentary */
-  .standards-at-risk-table td:nth-child(4) {
-    white-space: pre-wrap;
-  }
-</style>
-{% endblock %}
-
-{% block bodyEnd %}
+{% block pageScripts %}
 <script nonce="{{nonce}}">
   // Simple script block - no complex template logic
 </script>
